# dadi

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  README.txt  bitbucket-pipelines.yml  build-env.yml  conftest.py  environment.yml  epydoc.config  low-coverage  low-coverage.pub  mkdocs-env.yml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
dadi/: Demographics1D.py  Demographics2D.py  Demographics3D.py  Godambe.py  Hessian.py  IO.py  Inference.py  Integration.py  Misc.py  NLopt_mod.py  Numerics.py  PhiManip.py  Plotting.py  RunInParallel.py  SFS.py  Spectrum_mod.py  __init__.py  godambe.py  godambe_temp.py  integration1D.c  integration2D.c  integration3D.c  integration4D.c  integration5D.c  integration_c.c  integration_c.pyf  integration_c.pyx  integration_cython.h  integration_shared.c  integration_shared.h  ms.py  tridiag.c  tridiag.h  tridiag.pyf  tridiag_cython.c  tridiag_cython.pyx
dadi-distributed/: .gitignore  dadi-distributed.py  dd-cli-workqueue.py  dd-local.py  dd-workqueue.py  example_sbatch.sh  infer_dm.py
dadi/DFE/: Cache1D_mod.py  Cache2D_mod.py  DemogSelModels.py  PDFs.c  PDFs.py  PDFs.pyf  PDFs_cython.c  PDFs_cython.pyx  Plotting.py  Selection.py  Selection_2d.py  Vourlaki2022.py  __init__.py  dadi-cli GenerateFs --vcf ..:examples:data:1KG.YRI  pdfs.py  test_point_pos.py
dadi/Demes/: Demes.py  DemesUtil.py  Inference.py  __init__.py
dadi/LowCoverage/: 1-1-CalculateError.py  1-2-CreatePartitions.py  1-3-SFS_Redistribution.py  1-4-SFS_Redistribution_dict.py  2-LC_Distortion.py  LowCovDistortion_SlowerVersion.py  LowCoverage.py  LowPass.py  LowPassTest.py
dadi/LowPass/: LowPass.py  __init__.py
dadi/Polyploidy/: Demographics1D.py  Demographics2D.py  Int1D_poly.c  Int1D_poly.pyx  Int2D_poly.c  Int2D_poly.pyx  Int3D_poly.c  Int3D_poly.pyx  Int4D_poly.c  Int4D_poly.pyx  Int5D_poly.c  Int5D_poly.pyx  Integration.py  MiscPoly.py  PolyIntegration.c  PolyIntegration.pyx  __init__.py  integration_shared_poly.c  integration_shared_poly.h  kimura_analytic.py  setup.py  setup2.py  setup3.py  setup4.py  setup5.py  wrightfisher.py
dadi/PortikModels/: __init__.py  portik_models_2d.py  portik_models_3d.py
dadi/Triallele/: TriSpectrum_mod.py  __init__.py  bdry_injection.c  bdry_injection.pyx  bdry_injection_setup.py  cython_setup.py  demographics.py  example_triallele_model.py  integration.py  (+16 more)
doc/: index.md  mkdocs.yml
scripts/: __init__.py  ms_jsfs  ms_jsfs.py
tests/: admixture_test_manual.py  run_tests.py  test_1D_Integration.py  test_2D_frozen1.fs  test_4D.py  test_5D.py  test_Admixture.py  test_CUDA.py  test_DFE.py  test_Demes.py  test_Freezing.py  test_Inbreeding.py  test_LowPass.py  test_Optimization.py  test_PhiManip.py  test_Projection.py  test_Results.py  test_Spectrum.py  test_Subgenomes.py  test_Tridiagonal.py  test_dadi_demes.py  test_fs_from_data.py  test_fs_from_demes.py  test_phi1D.py
(+459 files in other folders)
